--- a/review-details-app/package.json
+++ b/review-details-app/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.2",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "portfinder": "^1.0.29",
     "react": "18.0.0",
