--- a/review-details-app/package.json
+++ b/review-details-app/package.json
@@ -19,7 +19,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-splash-screen": "~0.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
