--- a/review-details-app/package.json
+++ b/review-details-app/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@react-navigation/native": "^6.0.11",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
+    "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "portfinder": "^1.0.29",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-web": "~0.18.7",
-    "expo-splash-screen": "~0.16.1"
+    "react-native-screens": "~3.15.0",
+    "react-native-safe-area-context": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
