--- a/review-details-app/package.json
+++ b/review-details-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
@@ -21,9 +22,11 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-web": "~0.18.7",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
