--- a/review-details-app/package.json
+++ b/review-details-app/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
@@ -22,7 +25,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-gesture-handler": "^2.5.0",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
